# Sauri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.gitea/workflows/: BuildAndTest.yaml
3rdpart/: CMakeLists.txt
3rdpart/common/: .clang-format  CMakeLists.txt
3rdpart/common/cmake/: version.hpp.in
3rdpart/common/docs/: Doxyfile.in
3rdpart/common/include/common/: cache_data.h  common.h  error.h  exception.h
3rdpart/common/include/common/task/: i_task_controller.h  i_task_listener.h  task.h  task_data.h  task_manager.h
3rdpart/common/include/common/utils/: path.h  strings.h
3rdpart/common/src/: CMakeLists.txt
3rdpart/common/src/task/: CMakeLists.txt  task.cpp  task_manager.cpp
3rdpart/systemkit/: CMakeLists.txt
3rdpart/systemkit/cmake/: version.hpp.in
3rdpart/systemkit/docs/: Doxyfile.in
3rdpart/systemkit/example/: CMakeLists.txt  example.cpp
3rdpart/systemkit/include/systemkit/: systemkit.hpp
3rdpart/systemkit/include/systemkit/core/: component_factory.hpp  error.hpp  result.hpp
3rdpart/systemkit/include/systemkit/environment/: environment_variables.hpp
3rdpart/systemkit/include/systemkit/exceptions/: exceptions.hpp
3rdpart/systemkit/include/systemkit/firewall/: firewall_controller.hpp  firewall_rule.hpp
3rdpart/systemkit/include/systemkit/permissions/: permission_handler.hpp
3rdpart/systemkit/include/systemkit/process/: process_launcher.hpp
3rdpart/systemkit/include/systemkit/registry/: registry_manager.hpp
3rdpart/systemkit/src/: CMakeLists.txt  component_factory_impl.cpp  component_factory_impl.hpp
3rdpart/systemkit/src/linux/: environment_variables_linux.cpp  environment_variables_linux.hpp  firewall_controller_linux.cpp  firewall_controller_linux.hpp  permission_handler_linux.cpp  permission_handler_linux.hpp  process_launcher_linux.cpp  process_launcher_linux.hpp  registry_manager_stub.cpp
3rdpart/systemkit/src/macos/: environment_variables_macos.cpp  environment_variables_macos.hpp  firewall_controller_macos.cpp  firewall_controller_macos.hpp  permission_handler_macos.cpp  permission_handler_macos.hpp  process_launcher_macos.cpp  process_launcher_macos.hpp
3rdpart/systemkit/src/windows/: environment_variables_windows.cpp  environment_variables_windows.hpp  firewall_controller_windows.cpp  firewall_controller_windows.hpp  permission_handler_windows.cpp  permission_handler_windows.hpp  process_launcher_windows.cpp  process_launcher_windows.hpp  registry_manager_windows.cpp  registry_manager_windows.hpp  windows_utils.hpp
3rdpart/systemkit/tests/: CMakeLists.txt
3rdpart/systemkit/tests/units/: environment_variables_chinese_test.cpp  environment_variables_test.cpp  firewall_controller_test.cpp  process_launcher_test.cpp  registry_manager_test.cpp
cmake/: defined.cmake  sauri-config.cmake.in
cmake/properties/: iOS.cmake  msvc.cmake
common/: CMakeLists.txt
common/include/: error.h  logger_helper.h  nn_utils.h  singleton.h
common/src/: Common.cpp  Common.h  logger_helper.cpp
doc/: api.http
examples/: CMakeLists.txt
examples/simple-main/: CMakeLists.txt  GameToolClient.cpp  GameToolClient.h  cmrc.test  main.cpp
examples/simple-main/res_processor/: res_processor.h
gametools-base/: CMakeLists.txt
gametools-base/include/: nngame.h  nngamedef.h  nngamedownloader.h  nngamelibrarymanager.h  nngamesdk.h  nngameuser.h
gametools-base/src/: rpc_demo.cpp  rpc_demo.h
gametools-base/src/GameToolClient/: GameToolClient.cpp  GameToolClient.h
gametools-base/src/downloader/: downloader.cpp  downloader.h
gametools-base/tests/: CMakeLists.txt  test.cpp
gametools-base/tests/downloader/: test.cpp
gametools-base/tests/units/: CMakeLists.txt
include/sauri/: sauri.h
include/sauri/logger_helper/: logger_helper.h
include/sauri/rpc/: model.h  sauri_app.h
include/sauri/rpc/detail/: call_impl.h
include/sauri/rpc/pipe/: named_pipe_client.h  named_pipe_server.h
include/sauri/utils/: utils.h
sdk/: CMakeLists.txt
sdk/src/: sdk.cpp  sdk.h
src/: CMakeLists.txt  GameToolClient.cpp  GameToolClient.h  main.cpp
src/logger_helper/: logger.cpp  logger_helper.cpp
src/model/: model.h
src/res_processor/: res_processor.cpp  res_processor.h
src/rpc/: GameToolClient.cpp  GameToolClient.h  NamedPipeClient.cpp  NamedPipeClient.h  NamedPipeServer.cpp  NamedPipeServer.h
src/rpc/detail/: call_impl.h
src/rpc/pipe/: NamedPipeClient.cpp  NamedPipeClient.h  NamedPipeServer.cpp  NamedPipeServer.h
vcpkg_ports/sauri/: portfile.cmake  usage  vcpkg.json
vcpkg_ports/sqlcipher/: portfile.cmake  vcpkg.json
vcpkg_ports/sqlcipher/patches/: fix-sqlcipher.patch
vcpkg_ports/wcdb/: portfile.cmake  vcpkg.json
vcpkg_ports/wcdb/patches/: fix-wcdb.patch
